force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Giving_Summary_Include_Recurring_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Summary_Include_Recurring_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box include recurring gifts with an end date into the calculations of lifetime fundraising giving totals.</description>
    <inlineHelpText>Check to include recurring gifts with an end date into the calculation of lifetime fundraising  giving totals.</inlineHelpText>
    <label>Giving Summary Include Recurring Gift</label>
    <type>Checkbox</type>
</CustomField>