force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Batch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Batch_Threshold__c</fullName>
    <description>On insert of non-DCO Hard and Soft Credits, if the number of records is greater than or equal to this threshold, batch the insertion of Hard And Soft Credits and creation of Matching Gifts.</description>
    <inlineHelpText>On insert of non-DCO Hard and Soft Credits, if the number of records is greater than or equal to this threshold, batch the insertion of Hard And Soft Credits and creation of Matching Gifts.</inlineHelpText>
    <label>Hard and Soft Credit Batch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>