force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Subtype_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Subtype_Mapping__c</fullName>
    <description>Credit Subtype Map for Relationships and Affiliations to auto-populate credit subtypes in Gift Processing</description>
    <label>Hard And Soft Credit Subtype Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>