force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Hard_Soft_Credit_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_Soft_Credit_Calculation_Type__c</fullName>
    <description>Only applies to non-Legacy Payment Methods. Determines how Hard and Soft Credits are calculated: Either Payment Amount (Gift + Non-Gift) OR Gift Amount Payer Hard Credit / Non-Gift Amount Payer Soft Credit / Payment Amount Relationship Soft Credit.</description>
    <inlineHelpText>Only applies to non-Legacy Payment Methods. Determines how Hard and Soft Credits are calculated: Either Payment Amount (Gift + Non-Gift) OR Gift Amount Payer Hard Credit / Non-Gift Amount Payer Soft Credit / Payment Amount Relationship Soft Credit.</inlineHelpText>
    <label>Hard/Soft Credit Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
                <default>true</default>
                <label>Legacy</label>
            </value>
            <value>
                <fullName>Payment Amount</fullName>
            </value>
            <value>
                <fullName>Gift Amount / Non-Gift Amount / Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>