force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Hide_Non_Gift_Item_Button_By_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hide_Non_Gift_Item_Button_By_Type__c</fullName>
    <description>Hide the &quot;Add Non-Gift Item&quot; button for certain opportunity/transaction types in Gift Processing</description>
    <inlineHelpText>Include opportunity/transaction type that you would like to hide the button for (Ex: [&quot;Outright Gift, Pledge, Recurring Gift, Recurring Gift Payment&quot;]</inlineHelpText>
    <label>Hide Non Gift Item Button By Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>