force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Is_Delete_Opportunity_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Delete_Opportunity_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow deletetion of opportunities through gp UI</description>
    <inlineHelpText>Allow deletetion of opportunities through gp UI</inlineHelpText>
    <label>Is Delete Opportunity Enabled</label>
    <type>Checkbox</type>
</CustomField>