force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Knowtify_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Knowtify_Setting__c</fullName>
    <description>Knowtify configuration for xGPv2 in JSON format.  Possible keys are tabTitleLabel, sectionNameLabel, transactionType and fieldNameLabel.</description>
    <inlineHelpText>Knowtify configuration for xGPv2 in JSON format.  Possible keys are tabTitleLabel, sectionNameLabel, transactionType and fieldNameLabel.</inlineHelpText>
    <label>Knowtify Setting</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>