force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Lapsed_Membership_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Lapsed_Membership_Grace_Period__c</fullName>
    <description>Period in months that a membership can lapse before a member&apos;s &quot;Member Since&quot; date resets.</description>
    <inlineHelpText>Period in months that a membership can lapse before a member&apos;s &quot;Member Since&quot; date resets.</inlineHelpText>
    <label>Lapsed Membership Grace Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>