force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Mass_Payment_Custom_Fields_To_Save_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Mass_Payment_Custom_Fields_To_Save_List__c</fullName>
    <description>JSON List of Object and fields value to save when making mass payments.
ex) [{&quot;objectApi&quot;:&quot;Payment__c&quot;, &quot;label&quot;:&quot;Payment Object&quot;, &quot;fieldApiList&quot;:[&quot;Tender_Type_for_Gifts__c&quot;,&quot;Tender_Type_for_Pledges__c&quot;,&quot;Credit_Date__c&quot;,&quot;Check_Number__c&quot;]}]</description>
    <inlineHelpText>JSON List of Object and fields value to save when making mass payments.
ex) [{&quot;objectApi&quot;:&quot;Payment__c&quot;, &quot;label&quot;:&quot;Payment Object&quot;, &quot;fieldApiList&quot;:[&quot;Tender_Type_for_Gifts__c&quot;,&quot;Tender_Type_for_Pledges__c&quot;,&quot;Credit_Date__c&quot;,&quot;Check_Number__c&quot;]}]</inlineHelpText>
    <label>Mass Payment Custom Fields To Save List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>