force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Matching_Gift_Creation_HSC_Sources__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Gift_Creation_HSC_Sources__c</fullName>
    <inlineHelpText>If a Hard and Soft Credit record is created with Source field set to any valid picklist value listed here will have a Matching Gift created.</inlineHelpText>
    <label>Matching Gift Creation HSC Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>