force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__MG_Affiliation_Org_Roles_Override__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__MG_Affiliation_Org_Roles_Override__c</fullName>
    <description>Map of picklist API names to (Matching Ratio/Retiree Matching Ratio) to consider in matching gift creation. Default support org roles are Employer, Corporate Board, and Retiree Employer.</description>
    <inlineHelpText>Map of picklist API names to (Matching Ratio/Retiree Matching Ratio) to consider in matching gift creation. Ex: {&quot;Employer&quot;:&quot;Matching Ratio&quot;}.</inlineHelpText>
    <label>MG Affiliation Org Roles Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>