force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Non_Gift_Itemization_Additional_Layout__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Itemization_Additional_Layout__c</fullName>
    <label>Non Gift Itemization Additional Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>