force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Non_Gift_Itemization_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Itemization_Price_Book__c</fullName>
    <description>Id of price book to use in order to default amounts on non-gift items.</description>
    <inlineHelpText>Id of price book to use in order to default amounts on non-gift items.</inlineHelpText>
    <label>Non Gift Itemization Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>