force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Opportunity_Deletion_Batch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity_Deletion_Batch_Threshold__c</fullName>
    <description>When certain Ascend functions try to delete multiple Opportunities at once, they may attempt the deletion as a batch job instead of an immediate deletion. If the number of Opportunities is equal to or greater than the Batch Threshold defined here, then a batch job will be fired.</description>
    <inlineHelpText>When certain Ascend functions try to delete multiple Opportunities at once, they may attempt the deletion as a batch job instead of an immediate deletion. This setting controls the threshold at which that happens.</inlineHelpText>
    <label>Opportunity Deletion Batch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>