force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Payment_Processing_Batch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Processing_Batch_Threshold__c</fullName>
    <description>On the wizard, run a batch if the number of payments in a transaction is greater than or equal to this threshold.</description>
    <inlineHelpText>On the wizard, run a batch if the number of payments in a transaction is greater than or equal to this threshold.</inlineHelpText>
    <label>Payment Processing Batch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>