force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Pledge_Auto_Pay_Off_Settings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Auto_Pay_Off_Settings__c</fullName>
    <label>Pledge Auto Pay-Off Settings</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>