force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Pledge_Over_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Over_Payment_Method__c</fullName>
    <description>None - Will look at the existing Convert Pledge Overpayments to Gifts checkbox
Legacy - Will look at the existing Convert Pledge Overpayments to Gifts checkbox
Always over-pay pledge - Treated same as Convert Pledge Overpayments to Gifts false
Always convert over-payment into Outright Gift UI - Treated same as Convert Pledge Overpayments to Gifts true
Always convert over-payment into Outright Gift RTv2 -  Treated same as Convert Pledge Overpayments to Gifts true and instead of redirecting to gift UI it will automatically create it via RTv2
Always ask the user - Modal to choose how you want to overpay</description>
    <inlineHelpText>None - Will look at the existing Convert Pledge Overpayments to Gifts checkbox
Legacy - Will look at the existing Convert Pledge Overpayments to Gifts checkbox
Always over-pay pledge - Treated same as Convert Pledge Overpayments to Gifts false
Always convert over-payment into Outright Gift UI/RTv2 - Treated same as Convert Pledge Overpayments to Gifts true (redirect/automatically create via rtv2)
Always ask the user - Modal to choose how you want to overpay</inlineHelpText>
    <label>Pledge Over Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
                <default>true</default>
                <label>Legacy</label>
            </value>
            <value>
                <fullName>Always over-pay pledge</fullName>
            </value>
            <value>
                <fullName>Always convert over-payment into Outright Gift UI</fullName>
            </value>
            <value>
                <fullName>Always convert over-payment into Outright Gift RTv2</fullName>
            </value>
            <value>
                <fullName>Always ask the user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>