force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Pledge_Underpay_Threshold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Underpay_Threshold_Percentage__c</fullName>
    <inlineHelpText>This field establishes the maximum under-payment allowed to consider an installment to be paid. For example, if the installment is USD $100, and this value is 3%, then USD $97 will consider the installment to be paid.</inlineHelpText>
    <label>Pledge Underpay Threshold Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>