force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Prorate_Memberships_on_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prorate_Memberships_on_Overpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will prorate membership expiration dates on overpayment.</description>
    <inlineHelpText>This will prorate membership expiration dates on overpayment.</inlineHelpText>
    <label>Prorate Memberships on Overpayment</label>
    <type>Checkbox</type>
</CustomField>