force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Prorate_Memberships_on_Underpayment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prorate_Memberships_on_Underpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will prorate membership expiration dates on underpayment.</description>
    <inlineHelpText>This will prorate membership expiration dates on underpayment.</inlineHelpText>
    <label>Prorate Memberships on Underpayment</label>
    <type>Checkbox</type>
</CustomField>