force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Session_Fields_To_Track__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Fields_To_Track__c</fullName>
    <description>Fields to query for tracking the session history object</description>
    <inlineHelpText>Currency fields to track and display when session is closed. Use API names separated by commas.</inlineHelpText>
    <label>Session Fields To Track</label>
    <length>1111</length>
    <type>LongTextArea</type>
</CustomField>