force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Session_Reports_Button_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Reports_Button_List__c</fullName>
    <description>List of report Developer Names to open.</description>
    <inlineHelpText>List of report Developer Names to open.</inlineHelpText>
    <label>Session Reports Button List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>