force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Third_Party_Enable_Donor_DCO__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Third_Party_Enable_Donor_DCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Third Party Pledge Payments. This controls whether the pledged organization&apos;s DCO gets soft credited. If True, then DCO will get soft credits. If False, then the DCO will not get soft credits.</description>
    <inlineHelpText>Used in Third Party Pledge Payments. This controls whether the pledged organization&apos;s DCO gets soft credited. If True, then DCO will get soft credits. If False, then the DCO will not get soft credits.</inlineHelpText>
    <label>Third Party - Enable Donor DCO</label>
    <type>Checkbox</type>
</CustomField>