force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Third_Party_Enable_Donor_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Third_Party_Enable_Donor_Soft_Credit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used in Third Party Pledge Payments. This controls whether the constituent or organization on the pledge gets soft credited. If True, the donor gets soft credit and if False, the donor will not get soft credit.</description>
    <inlineHelpText>Used in Third Party Pledge Payments. This controls whether the constituent or organization on the pledge gets soft credited. If True, the donor gets soft credit and if False, the donor will not get soft credit.</inlineHelpText>
    <label>Third Party - Enable Donor Soft Credit</label>
    <type>Checkbox</type>
</CustomField>