force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Third_Party_Enable_Third_Party_DCO__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Third_Party_Enable_Third_Party_DCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in third party pledge payments. This controls whether the third party organization&apos;s DCO get soft credited. If True, the DCO will get soft credit and if False, the DCO will not get soft credit.</description>
    <inlineHelpText>Used in third party pledge payments. This controls whether the third party organization&apos;s DCO get soft credited. If True, the DCO will get soft credit and if False, the DCO will not get soft credit.</inlineHelpText>
    <label>Third Party - Enable Third Party DCO</label>
    <type>Checkbox</type>
</CustomField>