force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__UBE_Batch_Size_Override__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__UBE_Batch_Size_Override__c</fullName>
    <description>The batch processing record count to use to override the coded default value of 10.</description>
    <inlineHelpText>If you wish to override the batch record count for processing, specify the value here.  This is a JSON formatted string that specifies a value per object.</inlineHelpText>
    <label>UBE Batch Size Override</label>
    <type>TextArea</type>
</CustomField>