force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__UBE_Batch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__UBE_Batch_Threshold__c</fullName>
    <description>Unified Business Engine (UBE)  Batch Threshold</description>
    <inlineHelpText>This value determines the threshold at which UBE submits a job for batch processing.  If the record count exceeds this threshold, the processing is submitted to batch versus interactive processing.</inlineHelpText>
    <label>UBE Batch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>