force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Update_Existing_Memberships__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Update_Existing_Memberships__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Existing Memberships</label>
    <type>Checkbox</type>
</CustomField>