force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Use_Currency_Conversion_Download_API__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Currency_Conversion_Download_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Currency Conversion Download API</label>
    <type>Checkbox</type>
</CustomField>