force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__xGP_Tab_Refresh_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__xGP_Tab_Refresh_Configuration__c</fullName>
    <description>Map of keys (tab name) to a boolean value. ie. {&quot;One-Time Membership&quot;: true}
Possible keys include: Gift, Pledge, Recurring, One-Time Membership, Auto Renewing Membership, Installment Based Membership
Membership tabs are set to true by default
If true, refreshes page information for the specified tab after user changes the Constituent/Organization in xGP</description>
    <inlineHelpText>Map of keys (tab name) to a boolean value. ie. {&quot;One-Time Membership&quot;: true}
Possible keys include: Gift, Pledge, Recurring, One-Time Membership, Auto Renewing Membership, Installment Based Membership
Membership tabs are set to true by default
If true, refreshes page information for the specified tab after user changes the Constituent/Organization in xGP</inlineHelpText>
    <label>xGP Tab Refresh Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>