force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__xGPv2_Application_Page__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__xGPv2_Application_Page__c</fullName>
    <description>The xGPv2 application page API name that will be used to open xGPv2 on the Session record and on the Send to xGPv2 button on the Review Transaction (v2) record.</description>
    <inlineHelpText>The xGPv2 application page API name that will be used to open xGPv2 on the Session record and on the Send to xGPv2 button on the Review Transaction (v2) record.</inlineHelpText>
    <label>xGPv2 Application Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>