force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__xMG_Disb_Comp_Width_Percent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__xMG_Disb_Comp_Width_Percent__c</fullName>
    <description>Auto calculated when blank. Sets the width of the Disbursement and Organization component in xMG. Organization component will be (100 - xMG_Disb_Comp_Width_Percent).</description>
    <inlineHelpText>Auto calculated when blank. Sets the width of the Disbursement component: (xMG_Disb_Comp_Width_Percent) and Organization component: (100 - xMG_Disb_Comp_Width_Percent)</inlineHelpText>
    <label>xMG Disbursement Component Width %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>