force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/validationRules/ucinn_ascendv2__ACH_Data_Storage_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__ACH_Data_Storage_Method</fullName>
    <active>true</active>
    <description>Confirm &quot;Unmasked &amp; Unencrypted&quot; storage method.</description>
    <errorConditionFormula>ISPICKVAL(ucinn_ascendv2__Account_Number_Storage_Method__c, &apos;Unmasked &amp; Unencrypted&apos;) &amp;&amp;
ucinn_ascendv2__Account_Number_Storage_Mthd_Conf_Phrase__c != &apos;I confirm Unmasked _&amp;AND&amp;_ Unencrypted ACH / Direct Debit Account Numbers in ascend.&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Account_Number_Storage_Method__c</errorDisplayField>
    <errorMessage>Account Number Confirmation must be &quot;I confirm Unmasked _&amp;AND&amp;_ Unencrypted ACH / Direct Debit Account Numbers in ascend.&quot; for the selected storage method.</errorMessage>
</ValidationRule>