force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/validationRules/ucinn_ascendv2__Custom_Display_Positions_and_Field_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Custom_Display_Positions_and_Field_Order</fullName>
    <active>true</active>
    <description>Custom Display Positions cannot be blank if Custom Field Orders is populated, and Custom Field Orders cannot be blank if Custom Display Positions is populated.</description>
    <errorConditionFormula>(NOT(ISBLANK(ucinn_ascendv2__Custom_Display_Field_Orders__c)) &amp;&amp; ISBLANK(ucinn_ascendv2__Custom_Display_Positions__c)) || (NOT(ISBLANK(ucinn_ascendv2__Custom_Display_Positions__c)) &amp;&amp; ISBLANK(ucinn_ascendv2__Custom_Display_Field_Orders__c))</errorConditionFormula>
    <errorMessage>Custom Display Positions cannot be blank if Custom Field Orders is populated, and Custom Field Orders cannot be blank if Custom Display Positions is populated.</errorMessage>
</ValidationRule>